--- a/app/src/main/res/xml/my_app_widget_info.xml
+++ b/app/src/main/res/xml/my_app_widget_info.xml
@@ -1,3 +1,9 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:initialLayout="@layout/glance_default_loading_layout">
+    android:initialLayout="@layout/glance_default_loading_layout"
+    android:description="@string/widget_description"
+    android:targetCellHeight="2"
+    android:targetCellWidth="2"
+    android:minWidth="40dp"
+    android:minHeight="40dp"
+    android:updatePeriodMillis="3600000">
 </appwidget-provider>
