--- a/app/src/main/res/xml/my_app_widget_info.xml
+++ b/app/src/main/res/xml/my_app_widget_info.xml
@@ -5,5 +5,6 @@
     android:targetCellWidth="2"
     android:minWidth="40dp"
     android:minHeight="40dp"
+    android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="3600000">
 </appwidget-provider>
